--- a/index.html
+++ b/index.html
@@ -7,37 +7,51 @@
 		padding: 0.5em;
 	}
 	#production {
-		background-color: red;
+		background-color: rgba(255, 0, 0, 0.4);
+	}
+	table {
+		border-collapse: collapse;
+	}
+	td {
+		font-size: 1.5em;
+		padding: 2em 0.5em;
 	}
 </style>
 
+<!--
 <form method="post" action="https://duckduckgo.com/lite" target="_blank">
 <input size="80" name="q" autofocus>
 <input type="submit" value="Search">
 </form> 
+-->
 
-<section>
-Organization
-<a href="https://mail.google.com/mail/u/0/h/1thwq0ea1sxsi/?&">Mail</a>
-<a href="https://calendar.google.com/">Calendar</a>
-<a href="https://thirdchannel.atlassian.net/secure/RapidBoard.jspa?rapidView=3&quickFilter=5">Planning Board</a>
-<a href="https://github.com/thirdchannel">GitHub</a>
-<a href="https://github.com/pulls?utf8=%E2%9C%93&q=is%3Aopen+is%3Apr+involves%3Aeliottwiener-thirdchannel+">Pull Requests</a>
-<a href="https://thirdchannel.atlassian.net/wiki/spaces/DEV/overview">Confluence</a>
+<table>
+<tr>
+	<td>Organization</td>
+	<td><a href="https://mail.google.com/mail/u/0/h/1thwq0ea1sxsi/?&">Mail</a></td>
+	<td><a href="https://calendar.google.com/">Calendar</a></td>
+	<td><a href="https://thirdchannel.atlassian.net/secure/RapidBoard.jspa?rapidView=3&quickFilter=5">Planning Board</a></td>
+	<td><a href="https://github.com/thirdchannel">GitHub</a></td>
+	<td><a href="https://github.com/pulls?utf8=%E2%9C%93&q=is%3Aopen+is%3Apr+involves%3Aeliottwiener-thirdchannel+">Pull Requests</a></td>
+	<td><a href="https://thirdchannel.atlassian.net/wiki/spaces/DEV/overview">Confluence</a></td>
+</tr>
 
-</section>
+<tr id="production">
+	<td>Production</td>
+	<td><a href="https://www2.thirdchannel.com/login">ThirdChannel</a></td>
+	<td><a href="http://rabbitmq.thirdchannel.com/#/">RabbitMQ Admin</a></td>
+	<td><a href="http://build.thirdchannel.com/jenkins/">Old Jenkins</a></td>
+	<td><a href="https://jenkins.thirdchannel.com/blue/organizations/jenkins/pipelines">New Jenkins</a></td>
+	<td><a href="https://thirdchannel.loggly.com/">Loggly</a></td>
+	<td></td>
+</tr>
 
-<section id="production">
-Production
-<a href="https://www2.thirdchannel.com/login">ThirdChannel</a>
-<a href="http://rabbitmq.thirdchannel.com/#/">RabbitMQ Admin</a>
-<a href="http://build.thirdchannel.com/jenkins/">Old Jenkins</a>
-<a href="https://jenkins.thirdchannel.com/blue/organizations/jenkins/pipelines">New Jenkins</a>
-<a href="https://thirdchannel.loggly.com/">Loggly</a>
-</section>
-
-<section>
-Dev
-<a href="http://www2.thirdchannel.dev:5000/login">ThirdChannel</a>
-<a href="http://localhost:15672/#/">RabbitMQ Admin</a>
-</section>
+<tr>
+	<td>Development</td>
+	<td><a href="http://www2.thirdchannel.dev:5000/login">ThirdChannel</a></td>
+	<td><a href="http://localhost:15672/#/">RabbitMQ Admin</a></td>
+	<td></td>
+	<td></td>
+	<td></td>
+	<td></td>
+</tr>
