--- a/index.html
+++ b/index.html
@@ -156,4 +156,33 @@ tr {
 		
 	</tr>
 
+	<tr>
+		<td>jira</td>
+		
+			
+				<td>
+					<a href="https://thirdchannel.atlassian.net/issues/?filter=20599">
+						program services queue
+					</a>
+				</td>
+			
+		
+			
+				<td>
+					<a href="https://thirdchannel.atlassian.net/issues/?filter=14300">
+						current sprint
+					</a>
+				</td>
+			
+		
+			
+				<td>
+					<a href="https://thirdchannel.atlassian.net/secure/CreateIssue!default.jspa">
+						create ticket
+					</a>
+				</td>
+			
+		
+	</tr>
+
 </table>
