change rabbitmq prod link, add loggly

--- a/index.html
+++ b/index.html
@@ -45,8 +45,21 @@ tr {
 		
 			
 				<td>
-					<a href="https://strong-emu.rmq.cloudamqp.com/#/">
+					<a href="https://customer.cloudamqp.com/instance/56783/sso?goto=details/mgmt">
 						prod
+					</a>
+				</td>
+			
+		
+	</tr>
+
+	<tr>
+		<td>loggly</td>
+		
+			
+				<td>
+					<a href="https://thirdchannel.loggly.com/search">
+						search
 					</a>
 				</td>
 			
