add google, spacing, reorder

--- a/index.html
+++ b/index.html
@@ -67,6 +67,56 @@ tr {
 	</tr>
 
 	<tr>
+		<td>google</td>
+		
+			
+				<td>
+					<a href="https://mail.google.com/mail/u/0/h/17hmrgno8n0pe/">
+						mail
+					</a>
+				</td>
+			
+		
+			
+				<td>
+					<a href="https://calendar.google.com/calendar/r/agenda">
+						calendar
+					</a>
+				</td>
+			
+		
+	</tr>
+
+	<tr>
+		<td>jira</td>
+		
+			
+				<td>
+					<a href="https://thirdchannel.atlassian.net/issues/?filter=20599">
+						program services queue
+					</a>
+				</td>
+			
+		
+			
+				<td>
+					<a href="https://thirdchannel.atlassian.net/issues/?filter=14300">
+						current sprint
+					</a>
+				</td>
+			
+		
+			
+				<td>
+					<a href="https://thirdchannel.atlassian.net/secure/CreateIssue!default.jspa">
+						create ticket
+					</a>
+				</td>
+			
+		
+	</tr>
+
+	<tr>
 		<td>job-scheduling</td>
 		
 			
@@ -163,35 +213,6 @@ tr {
 				<td>
 					<a href="http://build.thirdchannel.com/jenkins/view/ThirdChannel/job/ThirdChannel-production-deploy/">
 						deploy
-					</a>
-				</td>
-			
-		
-	</tr>
-
-	<tr>
-		<td>jira</td>
-		
-			
-				<td>
-					<a href="https://thirdchannel.atlassian.net/issues/?filter=20599">
-						program services queue
-					</a>
-				</td>
-			
-		
-			
-				<td>
-					<a href="https://thirdchannel.atlassian.net/issues/?filter=14300">
-						current sprint
-					</a>
-				</td>
-			
-		
-			
-				<td>
-					<a href="https://thirdchannel.atlassian.net/secure/CreateIssue!default.jspa">
-						create ticket
 					</a>
 				</td>
 			
